Added Character create functionality

--- a/CharacterManager.Data/CharacterManager.Data.csproj
+++ b/CharacterManager.Data/CharacterManager.Data.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Journal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
