--- a/CharacterManager.Models/CharacterManager.Models.csproj
+++ b/CharacterManager.Models/CharacterManager.Models.csproj
@@ -54,6 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterCreate.cs" />
+    <Compile Include="CharacterDetail.cs" />
+    <Compile Include="CharacterEdit.cs" />
+    <Compile Include="CharacterListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
