--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -267,6 +267,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Character\Create.cshtml" />
+    <Content Include="Views\Character\Index.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
+    <Content Include="Views\Character\Details.cshtml" />
+    <Content Include="Views\Character\Edit.cshtml" />
+    <Content Include="Views\Character\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
