--- a/CharacterManager.Services/CharacterManager.Services.csproj
+++ b/CharacterManager.Services/CharacterManager.Services.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterService.cs" />
+    <Compile Include="JournalService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
