--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -275,6 +275,8 @@
     <Content Include="Views\Character\Delete.cshtml" />
     <Content Include="Views\Journal\Create.cshtml" />
     <Content Include="Views\Journal\Index.cshtml" />
+    <Content Include="Views\Journal\Details.cshtml" />
+    <Content Include="Views\Journal\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
