--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\Journal\Index.cshtml" />
     <Content Include="Views\Journal\Details.cshtml" />
     <Content Include="Views\Journal\Edit.cshtml" />
+    <Content Include="Views\Journal\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
