--- a/CharacterManager.Data/CharacterManager.Data.csproj
+++ b/CharacterManager.Data/CharacterManager.Data.csproj
@@ -57,11 +57,28 @@
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Journal.cs" />
+    <Compile Include="Migrations\201808161444454_InitialCreate.cs" />
+    <Compile Include="Migrations\201808161444454_InitialCreate.Designer.cs">
+      <DependentUpon>201808161444454_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808201500018_addedInventoryOwnerId.cs" />
+    <Compile Include="Migrations\201808201500018_addedInventoryOwnerId.Designer.cs">
+      <DependentUpon>201808201500018_addedInventoryOwnerId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808161444454_InitialCreate.resx">
+      <DependentUpon>201808161444454_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808201500018_addedInventoryOwnerId.resx">
+      <DependentUpon>201808201500018_addedInventoryOwnerId.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
