Added images and background color

--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -215,7 +215,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\DnD_DMG_Art.jpg" />
+    <Content Include="Content\Images\DnD_MM_Art.jpg" />
+    <Content Include="Content\Images\DnD_PHB_Art.jpg" />
     <Content Include="Content\Images\DnD_Starter_Art.jpg" />
+    <Content Include="Content\Images\paper-1074136_1920.jpg" />
+    <Content Include="Content\Images\parchment-481114_1920.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
