--- a/CharacterManager.Data/CharacterManager.Data.csproj
+++ b/CharacterManager.Data/CharacterManager.Data.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201808232018248_addedPropertiesToCharacter.Designer.cs">
       <DependentUpon>201808232018248_addedPropertiesToCharacter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808281443331_addedDisplayAnnotations.cs" />
+    <Compile Include="Migrations\201808281443331_addedDisplayAnnotations.Designer.cs">
+      <DependentUpon>201808281443331_addedDisplayAnnotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -85,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808232018248_addedPropertiesToCharacter.resx">
       <DependentUpon>201808232018248_addedPropertiesToCharacter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808281443331_addedDisplayAnnotations.resx">
+      <DependentUpon>201808281443331_addedDisplayAnnotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
