--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -216,6 +216,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\DFS_poster1.jpg" />
     <Content Include="Content\Images\DnD_DMG_Art.jpg" />
     <Content Include="Content\Images\DnD_MM_Art.jpg" />
     <Content Include="Content\Images\DnD_PHB_Art.jpg" />
