--- a/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
+++ b/CharacterManager.WebMVC/CharacterManager.WebMVC.csproj
@@ -206,6 +206,7 @@
     </Compile>
     <Compile Include="Helpers\EnumExtensions.cs" />
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
+    <Compile Include="Helpers\ModifierExtensions.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
