--- a/CharacterManager.Data/CharacterManager.Data.csproj
+++ b/CharacterManager.Data/CharacterManager.Data.csproj
@@ -77,6 +77,18 @@
     <Compile Include="Migrations\201808291355046_addedAttributes.Designer.cs">
       <DependentUpon>201808291355046_addedAttributes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808301712504_addedSkills.cs" />
+    <Compile Include="Migrations\201808301712504_addedSkills.Designer.cs">
+      <DependentUpon>201808301712504_addedSkills.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808301726544_addedAnimalHandling.cs" />
+    <Compile Include="Migrations\201808301726544_addedAnimalHandling.Designer.cs">
+      <DependentUpon>201808301726544_addedAnimalHandling.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808301746384_addedSavingThrows.cs" />
+    <Compile Include="Migrations\201808301746384_addedSavingThrows.Designer.cs">
+      <DependentUpon>201808301746384_addedSavingThrows.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -99,6 +111,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808291355046_addedAttributes.resx">
       <DependentUpon>201808291355046_addedAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808301712504_addedSkills.resx">
+      <DependentUpon>201808301712504_addedSkills.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808301726544_addedAnimalHandling.resx">
+      <DependentUpon>201808301726544_addedAnimalHandling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808301746384_addedSavingThrows.resx">
+      <DependentUpon>201808301746384_addedSavingThrows.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
