Added level property

--- a/CharacterManager.Data/CharacterManager.Data.csproj
+++ b/CharacterManager.Data/CharacterManager.Data.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Migrations\201808301746384_addedSavingThrows.Designer.cs">
       <DependentUpon>201808301746384_addedSavingThrows.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808301821041_addedLevelProperty.cs" />
+    <Compile Include="Migrations\201808301821041_addedLevelProperty.Designer.cs">
+      <DependentUpon>201808301821041_addedLevelProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -120,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808301746384_addedSavingThrows.resx">
       <DependentUpon>201808301746384_addedSavingThrows.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808301821041_addedLevelProperty.resx">
+      <DependentUpon>201808301821041_addedLevelProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
